[package]
name = "rusty_link"
version = "0.4.2"
authors = ["Andreas Mueller <anzbert@gmail.com>"]
edition = "2021"
description = "Rust bindings for Ableton Link through the official C Wrapper (abl_link)"
repository = "https://github.com/anzbert/rusty_link"
readme = "README.md"
license = "GPL-2.0-or-later"
keywords = ["ableton", "link"]
categories = ["api-bindings"]

[dependencies]
# None

[dev-dependencies]
crossterm = "^0.27.0"
cpal = "~0.15.2"
# cpal = { version = "~0.15.2", features = ["asio"] }
# cpal = { version = "~0.15.2", features = ["jack"] }

[build-dependencies]
cmake = "^0.1.50"
bindgen = "^0.69.2"
