[package]
name = "rusty_link"
version = "0.4.6"
authors = ["Andreas Mueller <anzbert@gmail.com>"]
edition = "2024"
description = "Rust bindings for Ableton Link through the official C Wrapper (abl_link)"
repository = "https://github.com/anzbert/rusty_link"
readme = "README.md"
license = "GPL-2.0-or-later"
keywords = ["ableton", "link"]
categories = ["api-bindings"]

[dependencies]
# The Ableton Link C++ source code is included as a git submodule in the /link folder

[dev-dependencies]
# These dev-dependencies are only used by the /examples.
crossterm = "^0.29.0"
cpal = "0.16.0"
# cpal = { version = "0.16.0", features = ["asio"] } 
# cpal = { version = "0.16.0", features = ["jack"] }

[build-dependencies]
cmake = "^0.1.54"
bindgen = "^0.72.1"
